// Author: Jiaying Guo

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.storage";
option java_outer_classname = "StorageProto";
option objc_class_prefix = "STORE";

package storage;

// The storage service definition.
service Storage {
  // localPut operation
  rpc localPut (LocalPutRequest) returns (LocalPutReply){}

  // localPut with fileID operation
  rpc localPut_with_fileid (LocalPutWithIDRequest) returns (LocalPutWithIDReply) {}

}


message LocalPutRequest {
  string created_time = 1;
  int32 size = 2;
  string path_name = 3;
  string file_type = 4;
  string file_from = 5;
  string row = 6;
  string data = 7;
}


message LocalPutReply {
  string file_id = 1;
}

message LocalPutWithIDRequest {
  string created_time = 1;
  int32 size = 2;
  string path_name = 3;
  string file_type = 4;
  string file_from = 5;
  string row = 6;
  string col = 7; // file_id
  string data = 8;
}


message LocalPutWithIDReply {
  string file_id = 1;
}

